Wrapped time info on forum comments to next line (below the name) to avoid overlap with drill-in link. Trello 544: https://trello.com/c/8KFmHd7D

--- a/src/main/resources/scss/forums/components/_forums.scss
+++ b/src/main/resources/scss/forums/components/_forums.scss
@@ -232,6 +232,13 @@ $indent: 0.9375rem;
 			}
 		}
 
+		.meta {
+			.name {
+				display: block;
+				line-height:1em;
+			}
+		}
+
 		.meta, .activity {
 			font-size: .75rem;
 			display: block;
